# RoadToMiddle

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  ROADMAP.md  Start.bat  TECHNOLOGIES.md  app.db  package-lock.json  package.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/electron/: backend-factory.ts  main.ts  preload.cjs  preload.ts  sqlite-storage.ts  storage.ts
app/scripts/: browser.mjs  build.mjs  dev.mjs  free-port.mjs  launch-electron.mjs
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: db.rs  lib.rs  review.rs
lessons/0.1.1/: 1.lection-eng.md  1.lection.md  2.lection-ru.md  2.summary.md  3.test-yourself.md  4.test-yourself-answers.md  4.test-yourself.md  5.exercises.md  5.test-yourself-answers.md  6.exercises.md
lessons/0.1.10/: 1.lection-eng.md  2.lection-ru.md  3.summary.md  4.test-yourself.md  5.test-yourself-answers.md  6.exercises.md
lessons/0.1.11/: 1.lection-eng.md  2.lection-ru.md  3.summary.md  4.test-yourself.md  5.test-yourself-answers.md  6.exercises.md
lessons/0.1.12/: 1.lection-eng.md  2.lection-ru.md  3.summary.md  4.test-yourself.md  5.test-yourself-answers.md  6.exercises.md
lessons/0.1.2/: 1.lection-eng.md  2.lection-ru.md  3.summary.md  4.test-yourself.md  5.test-yourself-answers.md  6.exercises.md
lessons/0.1.3/: 1.lection-eng.md  2.lection-ru.md  3.summary.md  4.test-yourself.md  5.test-yourself-answers.md  6.exercises.md
lessons/0.1.4/: 1.lection-eng.md  (+5 more)
scripts/: parse-roadmap.ts  test-parse-review.ts
(+1167 files in other folders)
